updated jupyter notebook

--- a/Manuscript_Figures.ipynb
+++ b/Manuscript_Figures.ipynb
@@ -52,17 +52,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seaweed = LinearSegmentedColormap.from_list(\"mycmap\", ['black','darkslategrey','seagreen','honeydew','azure'])\n",
-    "uranium = LinearSegmentedColormap.from_list(\"mycmap\", ['black','darkslategrey','olive','gold','beige','white'])\n",
-    "oven = LinearSegmentedColormap.from_list(\"mycmap\", ['black','maroon','peru','bisque','khaki'])\n",
-    "mcdonalds = LinearSegmentedColormap.from_list(\"mycmap\",['#0A070D','#A33B20','#A47963','#A6A57A','#F8F32B'])\n",
-    "frost = LinearSegmentedColormap.from_list(\"mycmap\",['#0A070D','#4F5D2F','#7D7E75','#B0B2B8','#CFD6EA','azure'])\n",
-    "green_lantern = LinearSegmentedColormap.from_list(\"mycmap\",['#0A070D','#1A936F','#88D498','#C6DABF','#F3E9D2','azure'])\n",
-    "perrywinkle = LinearSegmentedColormap.from_list(\"mycmap\",['#0A070D','#334195','#647AA3','#95B2B0','#C6EBBE','azure'])\n",
-    "flare = LinearSegmentedColormap.from_list(\"mycmap\",['#0A070D','#F4442E','#FC9E4F','#EDD382','#F2F3AE','azure'])\n",
-    "ice_kingdom = LinearSegmentedColormap.from_list(\"mycmap\",['#0A070D','#507DBC','#A1C6EA','#BBD1EA','#DAE3E5','white'])\n",
-    "camo = LinearSegmentedColormap.from_list(\"mycmap\",['#0A070D','#351C09','#625834','#A59132','#CCE28D','white'])\n",
-    "transition = LinearSegmentedColormap.from_list(\"mycmap\",['#080C0C','#5D737E','#FB5012','#E9DF00','white'])\n",
     "blues = LinearSegmentedColormap.from_list(\"mycmap\",['#080C0C','#16429b','#a196fd','white'])\n",
     "greens = LinearSegmentedColormap.from_list(\"mycmap\",['#080C0C','#319561','#f4e15b','white'])\n",
     "\n",
@@ -380,62 +369,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "a4309f7c-936d-40ac-a457-ee3386b931a2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# generating Ecology model examples \n",
-    "# Run only to generate the simulations again\n",
-    "\n",
-    "# sim = ecology_model(sd = 0.075, Cw = 0.025, K = 100, mu = 0.18, N0 = 10, X0 = 15, Y0 = 0, gens = 500)\n",
-    "# eco_res1 = sim.simulate(return_array = True)\n",
-    "# np.save('CwSd_paramSweep_examples/eco_modelSd0.075_Cw0.025.npy', eco_res1)\n",
-    "\n",
-    "# sim = ecology_model(sd = 0.25, Cw = 0.1, K = 100, mu = 0.18, N0 = 10, X0 = 15, Y0 = 0, gens = 500)\n",
-    "# eco_res2 = sim.simulate(return_array = True)\n",
-    "# np.save('CwSd_paramSweep_examples/eco_modelSd0.25_Cw0.1.npy', eco_res2)\n",
-    "\n",
-    "# sim = ecology_model(sd = 0.9, Cw = 0.25, K = 100, mu = 0.18, N0 = 10, X0 = 15, Y0 = 0, gens = 500)\n",
-    "# eco_res3 = sim.simulate(return_array = True)\n",
-    "# np.save('CwSd_paramSweep_examples/eco_modelSd0.9_Cw0.25.npy', eco_res3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "cf8fe916-7f0f-4667-8034-5e9d9974099c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loading in data for figures 3, 4, supp \n",
-    "files = glob('../CwSd_ParamSweeps/Eco_CwSd_paramSweep_5kids_100k/*')\n",
-    "eco_sweep_res = np.load(files.pop(0))[None,:,:]\n",
-    "for file in files:\n",
-    "    eco_sweep_res = np.concatenate((eco_sweep_res,np.load(file)[None,:,:]),axis = 0)\n",
-    "    \n",
-    "files = glob('../CwSd_ParamSweeps/Gen_CwSd_paramSweep_10kids_200K/*')\n",
-    "gen_sweep_res = np.load(files.pop(0))[None,:,:]\n",
-    "for file in files:\n",
-    "    gen_sweep_res = np.concatenate((gen_sweep_res,np.load(file)[None,:,:]),axis = 0)\n",
-    "\n",
-    "eco_res1 = np.load('../CwSd_paramSweep_examples/eco_modelSd0.075_Cw0.025.npy')\n",
-    "eco_res2 = np.load('../CwSd_paramSweep_examples/eco_modelSd0.25_Cw0.1.npy')\n",
-    "eco_res3 = np.load('../CwSd_paramSweep_examples/eco_modelSd0.9_Cw0.25.npy')\n",
-    "\n",
-    "gen_ar1 = Parse2KDE('../CwSd_paramSweep_examples/gen_modelSd_0.075_Cw_0.025.output','X')\n",
-    "gen_ar2 = Parse2KDE('../CwSd_paramSweep_examples/gen_modelSd_0.25_Cw_0.1.output','X')\n",
-    "gen_ar3 = Parse2KDE('../CwSd_paramSweep_examples/gen_modelSd_0.9_Cw_0.25.output','X')\n",
-    "\n",
-    "pca_df1 = get_pca('../vcfs','Sd_0.075_Cw_0.025')\n",
-    "pca_df2 = get_pca('../vcfs','Sd_0.25_Cw_0.1')\n",
-    "pca_df3 = get_pca('../vcfs','Sd_0.9_Cw_0.25')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "410abb92-40b0-4484-9f8c-87a7d7f2021a",
    "metadata": {
@@ -504,7 +437,6 @@
     "fig, axs = plt.subplots(4,1, sharex = True, figsize = (3,5))\n",
     "ax = axs[0]\n",
     "sns.kdeplot(D, ax = ax, bw_adjust = 0.2, color = 'darkslategrey', lw = 3)\n",
-    "#ax.hist(D,bins = 30)\n",
     "ax.set_xlim(-1.05,0.05)\n",
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
@@ -719,6 +651,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "a4309f7c-936d-40ac-a457-ee3386b931a2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# generating Ecology model examples \n",
+    "# Run to generate the simulations \n",
+    "\n",
+    "sim = ecology_model(sd = 0.075, Cw = 0.025, K = 100, mu = 0.18, N0 = 10, X0 = 15, Y0 = 0, gens = 500)\n",
+    "eco_res1 = sim.simulate(return_array = True)\n",
+    "np.save('Ecology_model/Fig_3/CwSd_paramSweep_examples/eco_modelSd0.075_Cw0.025.npy', eco_res1)\n",
+    "\n",
+    "sim = ecology_model(sd = 0.25, Cw = 0.1, K = 100, mu = 0.18, N0 = 10, X0 = 15, Y0 = 0, gens = 500)\n",
+    "eco_res2 = sim.simulate(return_array = True)\n",
+    "np.save('Ecology_model/Fig_3/CwSd_paramSweep_examples/eco_modelSd0.25_Cw0.1.npy', eco_res2)\n",
+    "\n",
+    "sim = ecology_model(sd = 0.9, Cw = 0.25, K = 100, mu = 0.18, N0 = 10, X0 = 15, Y0 = 0, gens = 500)\n",
+    "eco_res3 = sim.simulate(return_array = True)\n",
+    "np.save('Ecology_model/Fig_3/CwSd_paramSweep_examples/eco_modelSd0.9_Cw0.25.npy', eco_res3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "2e4eac99-3c66-4436-a0b6-048d17dd197d",
    "metadata": {},
@@ -745,6 +702,16 @@
     }
    ],
    "source": [
+    "files = glob('Ecology_model/Fig_3/CwSd_paramSweep/*')\n",
+    "eco_sweep_res = np.load(files.pop(0))[None,:,:]\n",
+    "for file in files:\n",
+    "    eco_sweep_res = np.concatenate((eco_sweep_res,np.load(file)[None,:,:]),axis = 0)\n",
+    "\n",
+    "eco_res1 = np.load('Ecology_model/Fig_3/CwSd_paramSweep_examples/eco_modelSd0.075_Cw0.025.npy')\n",
+    "eco_res2 = np.load('Ecology_model/Fig_3/CwSd_paramSweep_examples/eco_modelSd0.25_Cw0.1.npy')\n",
+    "eco_res3 = np.load('Ecology_model/Fig_3/CwSd_paramSweep_examples/eco_modelSd0.9_Cw0.25.npy')\n",
+    "\n",
+    "\n",
     "fig = plt.figure(figsize = (5,10))\n",
     "\n",
     "gs = gridspec.GridSpec(3,6, hspace = 0.5, wspace = 0.1,figure=fig)\n",
@@ -831,6 +798,16 @@
     }
    ],
    "source": [
+    "files = glob('Genetic_model/Fig_4/panel_A/CwSd_paramSweep/*')\n",
+    "gen_sweep_res = np.load(files.pop(0))[None,:,:]\n",
+    "for file in files:\n",
+    "    gen_sweep_res = np.concatenate((gen_sweep_res,np.load(file)[None,:,:]),axis = 0)\n",
+    "\n",
+    "gen_ar1 = Parse2KDE('Genetic_model/Fig_4/panel_B/CwSd_paramSweep_examples/gen_model_Sd_0.075_Cw_0.025.output','X')\n",
+    "gen_ar2 = Parse2KDE('Genetic_model/Fig_4/panel_B/CwSd_paramSweep_examples/gen_model_Sd_0.25_Cw_0.1.output','X')\n",
+    "gen_ar3 = Parse2KDE('Genetic_model/Fig_4/panel_B/CwSd_paramSweep_examples/gen_model_Sd_0.9_Cw_0.25.output','X')\n",
+    "\n",
+    "\n",
     "fig = plt.figure(figsize = (5,10))\n",
     "\n",
     "gs = gridspec.GridSpec(3,6, hspace = 0.5, wspace = 0.1,figure=fig)\n",
@@ -890,19 +867,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "37670741-77e9-45d3-a086-75b5c3e2c93e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files = glob('../Gen_paramSweep/*')\n",
-    "gen_sweep_res = np.load(files.pop(0))[None,:,:]\n",
-    "for file in files:\n",
-    "    gen_sweep_res = np.concatenate((gen_sweep_res,np.load(file)[None,:,:]),axis = 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "id": "dd3fb383-9160-47a6-8f28-6bf9e6e0ac71",
    "metadata": {},
@@ -919,6 +883,12 @@
     }
    ],
    "source": [
+    "files = glob('Genetic_model/Fig_5/Gen_paramSweep/*')\n",
+    "gen_sweep_res = np.load(files.pop(0))[None,:,:]\n",
+    "for file in files:\n",
+    "    gen_sweep_res = np.concatenate((gen_sweep_res,np.load(file)[None,:,:]),axis = 0)\n",
+    "\n",
+    "\n",
     "z = np.repeat(np.linspace(0.01,0.5,21),21*21)\n",
     "x = np.tile(np.linspace(0,3,21),21*21)\n",
     "y = np.tile(np.repeat(np.linspace(0.01,1,21),21),21)\n",
@@ -994,7 +964,6 @@
     "cbar_ax.set_xticks([])\n",
     "cbar_ax.set_yticks([])\n",
     "cbar_ax.yaxis.set_ticks_position('left')\n",
-    "#cbar_ax.yaxis.set_label_position(\"left\")\n",
     "cb.set_label('Proportion of Intermediate\\nFrequency Alleles', fontsize = 13, alpha = 0.8)\n",
     "\n",
     "# ax_behind.annotate('A',(0.04,0.8),fontweight = 'bold', fontsize = 16)\n",
@@ -1039,9 +1008,9 @@
     "                            secondary_system1, secondary_system2,\n",
     "                            secondary_system3, secondary_system4 )\n",
     "\n",
-    "pip1 = make_pip_array('../pips/Cw0.025-sd0.075_rep*.npy',transformFn)\n",
-    "pip2 = make_pip_array('../pips/Cw0.1-sd0.25_rep*.npy',transformFn)\n",
-    "pip3 = make_pip_array('../pips/Cw0.25-sd0.9_rep*.npy',transformFn)\n",
+    "pip1 = make_pip_array('Ecology_model/Sup_fig_1/pips/Cw0.025-sd0.075_rep*.npy',transformFn)\n",
+    "pip2 = make_pip_array('Ecology_model/Sup_fig_1/pips/Cw0.1-sd0.25_rep*.npy',transformFn)\n",
+    "pip3 = make_pip_array('Ecology_model/Sup_fig_1/pips/Cw0.25-sd0.9_rep*.npy',transformFn)\n",
     "\n",
     "## Fixing pheno order in pips to go 1 to 30 instead of 0 to 29 \n",
     "pip1 = np.hstack((pip1[:,1:,:],pip1[:,0,:][:,np.newaxis,:]))\n",
@@ -1133,6 +1102,10 @@
     }
    ],
    "source": [
+    "pca_df1 = get_pca('Genetic_model/Sup_fig_2/vcfs','Sd_0.075_Cw_0.025')\n",
+    "pca_df2 = get_pca('Genetic_model/Sup_fig_2/vcfs','Sd_0.25_Cw_0.1')\n",
+    "pca_df3 = get_pca('Genetic_model/Sup_fig_2/vcfs','Sd_0.9_Cw_0.25')\n",
+    "\n",
     "fig, axs = plt.subplots(1,3,figsize = (10,3))\n",
     "\n",
     "axs[0].scatter(pca_df1['pc1'],pca_df1['pc2'], c = pca_df3['gen'], cmap = 'cividis')\n",
@@ -1203,7 +1176,7 @@
     "# Pop size at branching\n",
     "split_time = np.full((30,10000), np.nan)\n",
     "for i in range(1,31):\n",
-    "    split_time[i-1,:] = np.load('../initial_states/gen_initial_states/%s_splitGens.npy' % i)\n",
+    "    split_time[i-1,:] = np.load('Genetic_model/Sup_fig_3/initial_states/%s_splitGens.npy' % i)\n",
     "\n",
     "pop_size = np.full((30,10000), np.nan)\n",
     "initial_pheno = np.full((30,10000), np.nan)\n",
@@ -1213,13 +1186,13 @@
     "final_pheno_mode = np.full((30,10000), np.nan)\n",
     "final_pheno_sum = np.full((30,30), np.nan)\n",
     "for i in range(1,31):\n",
-    "    arr = np.load('../initial_states/gen_initial_states/%s_Phenos.npy' % i)\n",
+    "    arr = np.load('Genetic_model/Sup_fig_3/initial_states/%s_Phenos.npy' % i)\n",
     "    pop_size[i-1,:] = arr.sum(axis = 1)\n",
     "    initial_pheno[i-1,:] = np.full((10000),i)\n",
     "    branching_pheno[i-1,:] = (arr * np.tile(np.linspace(1,30,30),10000).reshape(10000,30)).sum(axis = 1)/arr.sum(axis = 1)\n",
     "    branching_pheno_mode[i-1,:] = arr.argmax(axis = 1)\n",
     "    branching_pheno_sum[i-1,:] = arr.sum(axis = 0)\n",
-    "    arr = np.load('../initial2final_states/%s_Phenos.npy' % i)\n",
+    "    arr = np.load('Genetic_model/Sup_fig_3/initial2final_states/%s_Phenos.npy' % i)\n",
     "    for j, Xs in enumerate(arr):\n",
     "        if count_peaks_from_hist(Xs) < 2:\n",
     "            arr[j,:] = np.full((30),np.nan)\n",
@@ -1235,7 +1208,7 @@
     "  \n",
     "br_pheno_sd = np.full((30,10000), np.nan)\n",
     "for i in range(1,31):\n",
-    "    arr = np.load('../initial_states/gen_initial_states/%s_Phenos.npy' % i)\n",
+    "    arr = np.load('Genetic_model/Sup_fig_3/initial_states/%s_Phenos.npy' % i)\n",
     "    sds = []\n",
     "    for j in range(10000):\n",
     "        vals = []\n",
@@ -1371,27 +1344,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = glob('../CwSd_ParamSweeps/Gen_CwSd_paramSweep_10kids_200K/*')\n",
-    "sigmoid = np.load(files.pop(0))[None,:,:]\n",
-    "for file in files:\n",
-    "    sigmoid = np.concatenate((sigmoid,np.load(file)[None,:,:]),axis = 0)\n",
-    "\n",
-    "files = glob('../Fitness_Functions/flat/*')\n",
+    "files = glob('Genetic_model/Sup_fig_4/flat/*')\n",
     "flat = np.load(files.pop(0))[None,:,:]\n",
     "for file in files:\n",
     "    flat = np.concatenate((flat,np.load(file)[None,:,:]),axis = 0)\n",
     "\n",
-    "files = glob('../Fitness_Functions/linear/*')\n",
+    "files = glob('Genetic_model/Sup_fig_4/linear/*')\n",
     "linear = np.load(files.pop(0))[None,:,:]\n",
     "for file in files:\n",
     "    linear = np.concatenate((linear,np.load(file)[None,:,:]),axis = 0)\n",
     "    \n",
-    "files = glob('../Fitness_Functions/unimodal/*')\n",
+    "files = glob('Genetic_model/Sup_fig_4/unimodal/*')\n",
     "unimodal = np.load(files.pop(0))[None,:,:]\n",
     "for file in files:\n",
     "    unimodal = np.concatenate((unimodal,np.load(file)[None,:,:]),axis = 0)\n",
     "    \n",
-    "files = glob('../Fitness_Functions/bimodal/*')\n",
+    "files = glob('Genetic_model/Sup_fig_4/bimodal/*')\n",
     "bimodal = np.load(files.pop(0))[None,:,:]\n",
     "for file in files:\n",
     "    bimodal = np.concatenate((bimodal,np.load(file)[None,:,:]),axis = 0)"
